Overflow on Streams page fixed.

--- a/src/app/pages/streams-page/streams/streams.component.css
+++ b/src/app/pages/streams-page/streams/streams.component.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  overflow: hidden;
 }
 
 .no-streams {
@@ -12,6 +13,7 @@
 .menu-list {
   background: var(--bg-secondary);
   flex-grow: 1;
+  overflow-y: auto;
   padding: var(--space-md);
 }
 
